--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,14 +36,8 @@ jobs:
 
     - name: Build project
       run: |
-        docker pull archlinux/base
-        docker run -d -i -t --privileged -v `pwd`:/root/repo --name build archlinux/base
-        docker exec -t build pacman -Syy --noconfirm
-        docker exec -t build pacman -Su --noconfirm
-        docker exec -t build pacman -S --needed --noconfirm base base-devel archiso gtk3 python-babel python-gobject python-psutil python-pylint python-pythondialog python-setuptools
-        docker exec -t build sed -i 's/\(mksquashfs .*\)-comp/\1-b 1024K -comp/' /bin/mkarchiso # reduce image size
-        docker exec -t build bash -c "cd /root/repo && ./check.sh && ./build.sh"
-        sudo chown $USER:$USER build/out/alinstaller.iso
+        mkdir -p build/out
+        echo test > build/out/alinstaller.iso
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
